{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 16,
  "lineage": "95a5e4b8-b478-263a-11aa-b9374f443aa3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184128767:internet-gateway/igw-0b51e42f2d982c25f",
            "id": "igw-0b51e42f2d982c25f",
            "owner_id": "590184128767",
            "tags": {
              "Environment": "dev",
              "Name": "hello-world-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hello-world-igw"
            },
            "vpc_id": "vpc-0baecde94ea14d3b1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184128767:route-table/rtb-0b981cbe287aa0b4b",
            "id": "rtb-0b981cbe287aa0b4b",
            "owner_id": "590184128767",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b51e42f2d982c25f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "hello-world-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hello-world-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0baecde94ea14d3b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d69dfc6dfb618b3",
            "route_table_id": "rtb-0b981cbe287aa0b4b",
            "subnet_id": "subnet-0e67457e62d472b90"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061f2195d9ed80f0f",
            "route_table_id": "rtb-0b981cbe287aa0b4b",
            "subnet_id": "subnet-01d5fef69dffd451d"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184128767:security-group/sg-02f7d67138ff44c57",
            "description": "Allow inbound traffic for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02f7d67138ff44c57",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP inbound",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "hello-world-ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "590184128767",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "hello-world-ecs-tasks-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hello-world-ecs-tasks-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0baecde94ea14d3b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184128767:subnet/subnet-0e67457e62d472b90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e67457e62d472b90",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590184128767",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "hello-world-public-subnet-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hello-world-public-subnet-1"
            },
            "vpc_id": "vpc-0baecde94ea14d3b1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184128767:subnet/subnet-01d5fef69dffd451d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d5fef69dffd451d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590184128767",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "hello-world-public-subnet-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hello-world-public-subnet-2"
            },
            "vpc_id": "vpc-0baecde94ea14d3b1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184128767:vpc/vpc-0baecde94ea14d3b1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-074542bc0d2414ba6",
            "default_route_table_id": "rtb-01d2b2e9daf3506ad",
            "default_security_group_id": "sg-04e6f52114438c398",
            "dhcp_options_id": "dopt-099cea77b185046d9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0baecde94ea14d3b1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01d2b2e9daf3506ad",
            "owner_id": "590184128767",
            "tags": {
              "Environment": "dev",
              "Name": "hello-world-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hello-world-vpc"
            }
          }
        }
      ]
    }
  ]
}